Made header smaller; Added permissions

--- a/lib/youtoo_tools.html
+++ b/lib/youtoo_tools.html
@@ -13,12 +13,12 @@
     <section class="padding-bottom bck dark text center">
       <div class="flexbox">
         <div class="flex_1 padding-left padding-top padding-right">
-          <img src="img/youtoo_logo_128.png" class="responsive">
+          <img src="img/youtoo_logo_128.png" class="responsive logo">
         </div>
 
         <div class="flex_3 padding-top">
-          <h1 class="color theme">Youtoo Tools</h1>
-          <h4>Making it easy to troubleshoot browser and website issues.</h4>
+          <h3 class="color theme">Youtoo Tools</h3>
+          <h5>Making it easy to troubleshoot browser and website issues.</h5>
         </div>
       </div>
     </section>
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="js/cookies.js"></script>
     <script type="text/javascript" src="js/screenshot.js"></script>
     <script type="text/javascript" src="js/feedback.js"></script>
+    <script type="text/javascript" src="js/popup.js"></script>
     <!-- /APP -->
   </body>
 </html>
