--- a/lib/youtoo_tools.html
+++ b/lib/youtoo_tools.html
@@ -16,9 +16,9 @@
           <img src="img/youtoo_logo_128.png" class="responsive logo">
         </div>
 
-        <div class="flex_3 padding-top">
-          <h3 class="color theme">Youtoo Tools</h3>
-          <h5>Making it easy to troubleshoot browser and website issues.</h5>
+        <div class="flex_3 padding-top padding-right">
+          <h4 class="color theme">Youtoo Tools</h4>
+          <p>Making it easy to troubleshoot browser and website issues.</p>
         </div>
       </div>
     </section>
@@ -26,13 +26,13 @@
     <section class="text center book padding-top padding-left padding-right">
       <div class="flexbox">
         <div class="flex_1" style="padding: 2px;">
-          <a href="#" class="button anchor secondary">
+          <a href="#" class="button anchor secondary" data-tuktuk-modal="modal-confirm-cache-clear">
             <span class="icon bolt"></span>
             Clear Browser Cache
           </a>
         </div>
         <div class="flex_1" style="padding: 2px;">
-          <a href="#" class="button anchor secondary">
+          <a href="#" class="button anchor secondary" data-tuktuk-modal="modal-confirm-cookies-clear">
             <span class="icon bolt"></span>
             Clear Cookies
           </a>
@@ -43,26 +43,54 @@
 
     <section class="text center book padding-top padding-left padding-right padding-bottom">
       <div class="flexbox">
-        <div class="flex_1 none" style="padding: 2px;">
-          <a href="#" class="button anchor alert">
+        <div class="flex_1" style="padding: 2px;">
+          <a href="#" class="button anchor alert" id="action-cache-disable">
             <span class="icon remove"></span>
             Disable Browser Cache
           </a>
-        </div>
-        <div class="flex_1" style="padding: 2px;">
-          <a href="#" class="button anchor success">
+          <a href="#" class="button anchor success none" id="action-cache-enable">
             <span class="icon remove"></span>
             Enable Browser Cache
           </a>
         </div>
         <div class="flex_1" style="padding: 2px;">
-          <a href="#" class="button anchor">
+          <a href="#" class="button anchor" id="action-incognito-create">
             <span class="icon eye-close"></span>
             Incognito Window
           </a>
         </div>
       </div>
     </section>
+
+    <footer class="padding-left padding-bottom text small book">
+      Developed by <strong><a href="#">Youtoo Technologies</a></strong>, 2014
+    </footer>
+
+    <div class="column_6" id="modal-confirm-cache-clear" data-tuktuk="modal">
+      <header>
+        <h3>Confirm</h3>
+      </header>
+      <article>
+        Are you sure that you want to clear your browser's cache?
+      </article>
+      <footer>
+        <button data-modal="close" class="success normal inline" id="action-cache-clear"><span class="icon ok"></span> Confirm</button>
+        <button data-modal="close" class="alert normal inline"><span class="icon remove"></span> Cancel</button>
+      </footer>
+    </div>
+
+    <div class="column_6" id="modal-confirm-cookies-clear" data-tuktuk="modal">
+      <header>
+        <h3>Confirm</h3>
+      </header>
+      <article>
+        Are you sure that you want to clear your browser's cookies?
+      </article>
+      <footer>
+        <button data-modal="close" class="success normal inline" id="action-cookies-clear"><span class="icon ok"></span> Confirm</button>
+        <button data-modal="close" class="alert normal inline"><span class="icon remove"></span> Cancel</button>
+      </footer>
+    </div>
 
     <!-- <section class="text tiny center book">
       Copyright &copy; 2014 Youtoo Social TV
@@ -80,8 +108,8 @@
     <script type="text/javascript" src="js/popup.js"></script>
     <script type="text/javascript" src="js/cache.js"></script>
     <script type="text/javascript" src="js/cookies.js"></script>
-    <script type="text/javascript" src="js/screenshot.js"></script>
-    <script type="text/javascript" src="js/feedback.js"></script>
+    <!-- <script type="text/javascript" src="js/screenshot.js"></script> -->
+    <!-- <script type="text/javascript" src="js/feedback.js"></script> -->
     <script type="text/javascript" src="js/popup.js"></script>
     <!-- /APP -->
   </body>
